@@ -3,7 +3,7 @@ package edu.java.scrapper.provider.stackoverflow;
 import com.github.tomakehurst.wiremock.WireMockServer;
 import edu.java.provider.api.LinkInformation;
 import edu.java.provider.stackoverflow.StackOverflowInformationProvider;
-import java.net.URL;
+import java.net.URI;
 import lombok.SneakyThrows;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
@@ -35,11 +35,11 @@ public class StackOverflowProviderTest {
     @Test
     public void getInformationShouldReturnCorrectInformation() {
         StackOverflowInformationProvider provider = new StackOverflowInformationProvider(server.baseUrl());
-        var info = provider.fetchInformation(new URL("https://stackoverflow.com/questions/100/?hello_world"));
+        var info = provider.fetchInformation(new URI("https://stackoverflow.com/questions/100/?hello_world"));
         Assertions.assertThat(info)
             .extracting(LinkInformation::url, LinkInformation::title, LinkInformation::description)
             .contains(
-                new URL("https://stackoverflow.com/questions/100/?hello_world"),
+                new URI("https://stackoverflow.com/questions/100/?hello_world"),
                 "What is the &#39;--&gt;&#39; operator in C/C++?",
                 null
             );
@@ -49,7 +49,7 @@ public class StackOverflowProviderTest {
     @Test
     public void getInformationShouldReturnNullWhenQuestionNotFound() {
         StackOverflowInformationProvider provider = new StackOverflowInformationProvider(server.baseUrl());
-        var info = provider.fetchInformation(new URL("https://stackoverflow.com/questions/101/?hello_world"));
+        var info = provider.fetchInformation(new URI("https://stackoverflow.com/questions/101/?hello_world"));
         Assertions.assertThat(info).isNull();
     }
 
@@ -57,7 +57,7 @@ public class StackOverflowProviderTest {
     @Test
     public void isSupportedShouldReturnTrueIfHostIsValid() {
         StackOverflowInformationProvider provider = new StackOverflowInformationProvider(server.baseUrl());
-        var info = provider.isSupported(new URL("https://stackoverflow.com/questions/100/?hello_world"));
+        var info = provider.isSupported(new URI("https://stackoverflow.com/questions/100/?hello_world"));
         Assertions.assertThat(info).isTrue();
     }
 
@@ -65,7 +65,7 @@ public class StackOverflowProviderTest {
     @Test
     public void isSupportedShouldReturnFalseIfHostIsInValid() {
         StackOverflowInformationProvider provider = new StackOverflowInformationProvider(server.baseUrl());
-        var info = provider.isSupported(new URL("https://memoryoutofrange.com/jij/hih"));
+        var info = provider.isSupported(new URI("https://memoryoutofrange.com/jij/hih"));
         Assertions.assertThat(info).isFalse();
     }
 }
